sample.yml
apiVersion: v1
kind: Pod
metadata:
  name: samplepod
  namespace: my-namespace
spec:
  containers:
    - name: nginx-container
      image: nginx:latest
      ports:
        - containerPort: 80
    - name: redis-container
      image: redis:latest
      ports:
        - containerPort: 81
