podFirewall.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: isolated
  policyTypes:
    - Ingress
